  * Enable cdebconf's new column alignment capability.
    Requires cdebconf (>= 0.133).
  * Remove valid_visuals.d and instead call by their orders all scripts in
    visual.d.
  * Do partition indenting in another visual.d script instead of hardcoding
    it in partition_tree_choices().
  * Switch visual.d scripts to use column alignment (${!TAB}).

 -- Jérémy Bobbio <lunar@debian.org>  Tue, 29 Jul 2008 15:25:08 +0000

partman-base (123) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Improve display of virtio virtual disks.
  * Save and restore the current working directory in partman_(un)lock_unit().
    (Closes: #488687)

  [ Updated translations ]
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Slovak (sk.po) by Ivan Masár
  * Turkish (tr.po) by Mert Dirik

 -- Frans Pop <fjp@debian.org>  Wed, 16 Jul 2008 13:53:44 +0200

partman-base (122) unstable; urgency=low

  [ Otavio Salvador ]
  * Do not list /dev/mtd devices since they aren't supported by parted.

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Turkish (tr.po) by Mert Dirik

 -- Martin Michlmayr <tbm@cyrius.com>  Sun, 06 Jul 2008 15:51:35 +0300

partman-base (121) unstable; urgency=low

  [ Frans Pop ]
  * Add divider below "Use as" in the partition options dialog. If the
    partition is used for encryption, "Encryption method" will also be
    above the divider. As changing these option changes defaults and what
    other options are available, this provides a useful visual separation.

  [ Otavio Salvador ]
  * Update to GNU Parted 1.8: Change build-depends to libparted1.8-dev

  [ Updated translations ]
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Slovenian (sl.po) by Matej Kovacic
  * Turkish (tr.po) by Mert Dirik
  
 -- Otavio Salvador <otavio@debian.org>  Sat, 21 Jun 2008 17:02:06 -0300

partman-base (120) unstable; urgency=high

  [ Jérémy Bobbio ]